[package]
name = "xsd-generator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
quick-xml = { version = "*", features = ["serialize"] }
serde = { version = "*", features = ["derive"] }
